Temp intent change to fix bug
Serializable object not received by the activity on dashclock click.
Temp fix to just call another activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,7 @@
             android:value="AIzaSyBF4TEq7574DlurZoZ0hFdfwXuTci31Rqw" />
 
         <activity
+            android:exported="true"
             android:theme="@style/AppTheme.TranslucentActionBar"
             android:parentActivityName=".RouteActivity"
             android:name="be.howest.nmct.android.nmbsbruggekortrijk.app.ConnectionActivity"
